render the correct form in a new page

--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -212,7 +212,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="javascript:void()" class="dropdown-item">
+                  <a href="{{ url_for('inventory.devices.device_add') }}" class="dropdown-item">
                     <i class="bi bi-plus"></i>
                     Create a new Device
                   </a>
