--- a/ereuse_devicehub/templates/inventory/create_device.html
+++ b/ereuse_devicehub/templates/inventory/create_device.html
@@ -38,18 +38,26 @@
                       <select id="type" class="form-control" name="type" required="">
                         <option value="">Select one Type</option>
                         <optgroup label="Computer Monitor">
-                          <option value="Monitor">Monitor</option>
+                          <option value="Monitor"
+                          {% if form.type.data == 'Monitor' %} selected="selected"{% endif %}>Monitor</option>
                         </optgroup>
                         <optgroup label="Mobile">
-                          <option value="Smartphone">Smartphone</option>
-                          <option value="Tablet">Tablet</option>
-                          <option value="Cellphone">Cellphone</option>
+                          <option value="Smartphone"
+                          {% if form.type.data == 'Smartphone' %} selected="selected"{% endif %}>Smartphone</option>
+                          <option value="Tablet"
+                          {% if form.type.data == 'Tablet' %} selected="selected"{% endif %}>Tablet</option>
+                          <option value="Cellphone"
+                          {% if form.type.data == 'Cellphone' %} selected="selected"{% endif %}>Cellphone</option>
                         </optgroup>
                         <optgroup label="Computer Accessory">
-                          <option value="Mouse">Mouse</option>
-                          <option value="MemoryCardReader">Memory card reader</option>
-                          <option value="SAI">SAI</option>
-                          <option value="Keyboard">Keyboard</option>
+                          <option value="Mouse"
+                          {% if form.type.data == 'Mouse' %} selected="selected"{% endif %}>Mouse</option>
+                          <option value="MemoryCardReader"
+                          {% if form.type.data == 'MemoryCardReader' %} selected="selected"{% endif %}>Memory card reader</option>
+                          <option value="SAI"
+                          {% if form.type.data == 'SAI' %} selected="selected"{% endif %}>SAI</option>
+                          <option value="Keyboard"
+                          {% if form.type.data == 'Keyboard' %} selected="selected"{% endif %}>Keyboard</option>
                         </optgroup>
                       </select>
                       <small class="text-muted form-text">Type of devices</small>
