--- a/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
@@ -156,7 +156,7 @@
     <li class="nav-heading">Utils</li>
 
     <li class="nav-item">
-      <a class="nav-link " href="#TODO">
+      <a class="nav-link collapsed" href="{{ url_for('inventory.devices.taglist')}}">
         <i class="bi bi-tags"></i>
         <span>Labels</span>
       </a>
