remove tag from device

--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -191,7 +191,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="javascript:openRemove()" class="dropdown-item">
+                  <a href="javascript:removeTag()" class="dropdown-item">
                     <i class="bi bi-x"></i>
                     Remove Tag
                   </a>
