--- a/ereuse_devicehub/templates/inventory/removeDevicestag.html
+++ b/ereuse_devicehub/templates/inventory/removeDevicestag.html
@@ -49,6 +49,7 @@
                     </p>
                     {% endif %}
                   </div>
+                  <input class="devicesList" type="hidden" name="device" />
 
                   <div class="col-12">
                     <a href="{{ referrer }}" class="btn btn-danger">Cancel</a>
