--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -12,7 +12,7 @@
       {% elif lot.is_temporary %}
       <li class="breadcrumb-item active">Temporary Lot</li>
       <li class="breadcrumb-item active">{{ lot.name }}</li>
-      {% elif lot.is_incominig %}
+      {% elif lot.is_incoming %}
       <li class="breadcrumb-item active">Incoming Lot</li>
       <li class="breadcrumb-item active">{{ lot.name }}</li>
       {% elif lot.is_outgoing %}
