--- a/ereuse_devicehub/templates/inventory/tag_list.html
+++ b/ereuse_devicehub/templates/inventory/tag_list.html
@@ -30,7 +30,7 @@
             </div>
 
             <div class="btn-group dropdown ml-1" uib-dropdown="">
-              <a href="{{ url_for('inventory.devices.devicelist')}}" type="button" class="btn btn-primary">
+              <a href="{{ url_for('inventory.devices.tag_unnamed_add')}}" type="button" class="btn btn-primary">
                 <i class="bi bi-plus"></i>
                 Create UnNamed Tag
                 <span class="caret"></span>
