--- a/ereuse_devicehub/templates/inventory/tag_details.html
+++ b/ereuse_devicehub/templates/inventory/tag_details.html
@@ -75,17 +75,28 @@
                   <label class="col-form-label col-sm-2">Width</label>
                   <div class="col-sm-10">
                     <div class="input-group mb-3">
-                      <input class="form-control" name='width-tag' type="number" value="62" min="52" max="300" />
+                      <input class="form-control" id="width-tag" name='width-tag' type="number" value="62" min="52" max="300" />
                       <span class="input-group-text">mm</span>
                     </div>
                   </div>
                   <label class="col-form-label col-sm-2">Height</label>
                   <div class="col-sm-10">
                     <div class="input-group mb-3">
-                      <input class="form-control" name='height-tag' type="number" value="29" min="28" max="200" />
+                      <input class="form-control" id="height-tag" name='height-tag' type="number" value="29" min="28" max="200" />
                       <span class="input-group-text">mm</span>
                     </div>
                   </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-3 col-md-4">
+                    <a href="javascript:printpdf()" class="btn btn-success">Print</a>
+                </div>
+                <div class="col-lg-3 col-md-4">
+                    <a href="javascript:save_size()" class="btn btn-primary">Save</a>
+                </div>
+                <div class="col-lg-3 col-md-4">
+                    <a href="javascript:reset_size()" class="btn btn-danger">Reset</a>
                 </div>
               </div>
 
@@ -96,16 +107,11 @@
     </div>
   </div>
 </section>
+<script src="{{ url_for('static', filename='js/jquery-3.6.0.min.js') }}"></script>
 <script src="{{ url_for('static', filename='js/qrcode.js') }}"></script>
 <script src="{{ url_for('static', filename='js/pdf.min.js') }}"></script>
+<script src="{{ url_for('static', filename='js/print.pdf.js') }}"></script>
 <script type="text/javascript">
-    var qrcode = new QRCode(document.getElementById("qrcode"), {
-            text: "{{url_for('inventory.devices.device_details', id=tag.device.devicehub_id, _external=True)}}",
-            width: 128,
-            height: 128,
-            colorDark : "#000000",
-            colorLight : "#ffffff",
-            correctLevel : QRCode.CorrectLevel.H
-     });
+    qr_draw("{{url_for('inventory.devices.device_details', id=tag.device.devicehub_id, _external=True)}}")
 </script>
 {% endblock main %}
