Rename Labels --> Tags on side bar menu

--- a/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
@@ -158,9 +158,9 @@
     <li class="nav-item">
       <a class="nav-link collapsed" href="{{ url_for('inventory.devices.taglist')}}">
         <i class="bi bi-tags"></i>
-        <span>Labels</span>
+        <span>Tags</span>
       </a>
-    </li><!-- End Labels Page Nav -->
+    </li><!-- End Tags Page Nav -->
 
     <li class="nav-item">
       <a class="nav-link collapsed" href="{{ url_for('Document.StampsView') }}">
