--- a/ereuse_devicehub/templates/inventory/removeDeviceslot.html
+++ b/ereuse_devicehub/templates/inventory/removeDeviceslot.html
@@ -23,7 +23,7 @@
 
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <input type="submit" class="btn btn-primary d-none" value="Save changes" />
+          <input type="submit" class="btn btn-primary" style="display: none;" value="Save changes" />
         </div>
       </form>
 
