--- a/ereuse_devicehub/templates/inventory/actions.html
+++ b/ereuse_devicehub/templates/inventory/actions.html
@@ -41,7 +41,7 @@
 
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <input type="submit" class="btn btn-primary d-none" value="Create" />
+          <input type="submit" class="btn btn-primary" style="display: none;" value="Create" />
         </div>
       </form>
 
