--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -57,7 +57,7 @@
                 <span class="caret"></span>
               </button>
               {% endif %}
-              <ul class="dropdown-menu" aria-labelledby="btnLots"">
+              <ul class="dropdown-menu" aria-labelledby="btnLots">
                 <li>
                   <a href="javascript:void()" class="dropdown-item" data-bs-toggle="modal" data-bs-target="#addingLotModal">
                     <i class="bi bi-plus"></i>
@@ -80,7 +80,7 @@
               </button>
               <span class="d-none" id="activeActionModal" data-bs-toggle="modal" data-bs-target="#actionModal"></span>
               <span class="d-none" id="activeAllocateModal" data-bs-toggle="modal" data-bs-target="#allocateModal"></span>
-              <ul class="dropdown-menu" aria-labelledby="btnActions"">
+              <ul class="dropdown-menu" aria-labelledby="btnActions">
                 <li>
                     Status actions
                 </li>
