Fix printerType select style

--- a/ereuse_devicehub/templates/inventory/tag_details.html
+++ b/ereuse_devicehub/templates/inventory/tag_details.html
@@ -62,7 +62,7 @@
                   <label class="col-form-label col-sm-2">Size</label>
                   <div class="col-sm-10">
                     <div class="input-group mb-3">
-                      <select class="form-control" id="printerType">
+                      <select class="form-select" id="printerType">
                         <option label="Brother small size (62 x 29)" value="brotherSmall" selected="selected">
                           Brother small size (62 x 29)
                         </option>
