Set page_title & fix breadcrumb

--- a/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
@@ -1,4 +1,5 @@
 {% extends "ereuse_devicehub/base.html" %}
+{% block page_title %}{{ page_title }}{% endblock %}
 {% block body %}
 <!-- ======= Header ======= -->
 <header id="header" class="header fixed-top d-flex align-items-center">
