--- a/ereuse_devicehub/templates/inventory/tag_list.html
+++ b/ereuse_devicehub/templates/inventory/tag_list.html
@@ -6,8 +6,7 @@
   <h1>Inventory</h1>
   <nav>
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="index.html">Inventory</a></li>
-      <li class="breadcrumb-item active">Tags Management</li>
+      <li class="breadcrumb-item active">{{ page_title }}</li>
     </ol>
   </nav>
 </div><!-- End Page Title -->
