--- a/ereuse_devicehub/templates/inventory/device_detail.html
+++ b/ereuse_devicehub/templates/inventory/device_detail.html
@@ -7,8 +7,7 @@
   <nav>
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a href="{{ url_for('inventory.devices.devicelist')}}">Inventory</a></li>
-      <li class="breadcrumb-item active">Details device</li>
-      <li class="breadcrumb-item active">{{ device.devicehub_id }}</li>
+      <li class="breadcrumb-item active">{{ page_title }}</li>
     </ol>
   </nav>
 </div><!-- End Page Title -->
