--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -61,13 +61,13 @@
                 <li>
                   <a href="javascript:void()" class="dropdown-item" data-bs-toggle="modal" data-bs-target="#addingLotModal">
                     <i class="bi bi-plus"></i>
-                    Adding to a lot
+                    Add selected Devices to a lot
                   </a>
                 </li>
                 <li>
                   <a href="javascript:void()" class="dropdown-item" data-bs-toggle="modal" data-bs-target="#removeLotModal">
                     <i class="bi bi-x"></i>
-                    Removing from a lot
+                    Remove selected devices from a lot
                   </a>
                 </li>
               </ul>
@@ -164,15 +164,8 @@
               </button>
               <ul class="dropdown-menu" aria-labelledby="btnExport">
                 <li>
-                  <a href="javascript:openAdd()" class="dropdown-item">
-                    <i class="bi bi-plus"></i>
-                    Añadir dispositivos a lotes
-                  </a>
-                </li>
-                <li>
-                  <a href="javascript:openRemove()" class="dropdown-item">
-                    <i class="fa fa-fw fa-minus"></i>
-                    Eliminar dispisitvos de lotes
+                  <a href="#" class="dropdown-item">
+                    TODO: Not implemented
                   </a>
                 </li>
               </ul>
@@ -187,13 +180,13 @@
                 <li>
                   <a href="javascript:void()" class="dropdown-item" data-bs-toggle="modal" data-bs-target="#addingTagModal">
                     <i class="bi bi-plus"></i>
-                    Adding Tag
+                    Add Tag to selected Devices
                   </a>
                 </li>
                 <li>
                   <a href="javascript:removeTag()" class="dropdown-item">
                     <i class="bi bi-x"></i>
-                    Remove Tag
+                    Remove Tag from selected Devices
                   </a>
                 </li>
               </ul>
