--- a/ereuse_devicehub/templates/inventory/lot.html
+++ b/ereuse_devicehub/templates/inventory/lot.html
@@ -5,7 +5,8 @@
   <h1>{{ title }}</h1>
   <nav>
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="index.html">Inventory</a></li>
+      <!-- TODO@slamora replace with lot list URL when exists -->
+      <li class="breadcrumb-item"><a href="#TODO-lot-list">Lots</a></li>
       <li class="breadcrumb-item">Lot</li>
     </ol>
   </nav>
