--- a/ereuse_devicehub/templates/inventory/device_detail.html
+++ b/ereuse_devicehub/templates/inventory/device_detail.html
@@ -109,7 +109,7 @@
             <div class="tab-pane fade profile-overview" id="traceability">
               <h5 class="card-title">Traceability log Details</h5>
               <div class="list-group col-6">
-                {% for action in device.actions %}
+                {% for action in device.reverse_actions %}
                 <div class="list-group-item d-flex justify-content-between align-items-center">
                   {{ action.type }} {{ action.severity }}
                   <small class="text-muted">{{ action.created.strftime('%H:%M %d-%m-%Y') }}</small>
