--- a/ereuse_devicehub/templates/inventory/allocate.html
+++ b/ereuse_devicehub/templates/inventory/allocate.html
@@ -8,7 +8,12 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
 
-      <form action="{{ url_for('inventory.devices.allocate_add') }}" method="post">
+      <form action="
+      {% if lot %}
+          {{ url_for('inventory.devices.lot_allocate_add', lot_id=lot.id) }}
+      {% else %}
+          {{ url_for('inventory.devices.allocate_add') }}
+      {% endif %}" method="post">
       {{ form_new_allocate.csrf_token }}
         <div class="modal-body">
           <p class="text-danger" id="pol" style="display: none;">
