--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -40,7 +40,7 @@
       </div>
       {% endif %}
       <div class="card">
-        <div class="card-body pt-3">
+        <div class="card-body pt-3" style="min-height: 650px;">
           <!-- Bordered Tabs -->
 
             <div class="btn-group dropdown ml-1">
