deactive dataWipe action

--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -139,7 +139,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="javascript:newAction('DataWipe')" class="dropdown-item">
+                  <a href="javascript:void()" class="dropdown-item">
                     <i class="bi bi-eraser-fill"></i>
                     DataWipe
                   </a>
