change modal-fullscreen by modal-lg

--- a/ereuse_devicehub/templates/inventory/actions.html
+++ b/ereuse_devicehub/templates/inventory/actions.html
@@ -1,5 +1,5 @@
 <div class="modal fade" id="actionModal" tabindex="-1" style="display: none;" aria-hidden="true">
-  <div class="modal-dialog modal-fullscreen">
+  <div class="modal-dialog modal-lg">
     <div class="modal-content">
 
       <div class="modal-header">
