--- a/ereuse_devicehub/templates/inventory/allocate.html
+++ b/ereuse_devicehub/templates/inventory/allocate.html
@@ -1,6 +1,6 @@
 <div class="modal fade" id="allocateModal" tabindex="-1" style="display: none;" aria-hidden="true"
     data-show-action-form="{{ form_new_allocate.type.data }}">
-  <div class="modal-dialog modal-fullscreen">
+  <div class="modal-dialog modal-lg">
     <div class="modal-content">
 
       <div class="modal-header">
